--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         data-chapter-title="Introduction"
         data-filepath="README.md"
         data-basepath="."
-        data-revision="Fri Jan 29 2016 15:12:54 GMT+0100 (CET)"
+        data-revision="Fri Jan 29 2016 15:25:31 GMT+0100 (CET)"
         data-innerlanguage="">
     
 
@@ -294,7 +294,7 @@ setup.</p>
 <li>Browser-connected REPL, inspect and interact with your app running
 in the browser</li>
 </ul>
-<h3 id="sane-choices-across-the-stack"><a name="sane-choices-across-the-stack" class="plugin-anchor" href="#sane-choices-across-the-stack"><span class="fa fa-link"></span></a>Sane Choices Across the Stack</h3>
+<h3 id="solid-choices-across-the-stack"><a name="solid-choices-across-the-stack" class="plugin-anchor" href="#solid-choices-across-the-stack"><span class="fa fa-link"></span></a>Solid Choices Across the Stack</h3>
 <ul>
 <li>Om, build data driven, component based UIs</li>
 <li>Ring, Compojure, get server side routing and request handling</li>
